Fix navbar overflow

--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,6 @@
 }
 
 html, body {
-  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -17,6 +16,7 @@ html, body {
 }
 
 header, footer {
+  flex-grow: 0;
   color: white;
   flex-shrink: 0;
   width: 100%;
